Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,8 @@ a{
 
 @media screen and (max-width: 500px) {
     html {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: auto;
-        min-width: 50%;
-        min-height: 50%;
+        background-size: cover;
+        height: 100%;
+        overflow: hidden;
     }
 }
